# linux_AiOps

./: Makefile  README.md
linux_log_agent/: CMakeLists.txt  README.md
linux_log_agent/get_next_line/: get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
linux_log_agent/include/: bash_agent.h  libft.h
linux_log_agent/srcs/: CMakeLists.txt  inotify.c  main.c  socket.c  thread_monitor.c
linux_log_agent/test_unit/: CMakeLists.txt  test_1.c
python_serveur/: main.py  requirements.txt  serveur.py  serveur_in.py  serveur_log.py  serveur_out.py  t  tcp
workstation/: Makefile
